[package]
name = "zedmartzombiefest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13"
bevy_renet = "0.0.11"
bincode = "1.3.3"
local-ip-address = "0.6.0"
public-ip = "0.2.2"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
